@@ -1,9 +1,10 @@
 DATE         VERSION
 2015-05-13   4.01.00.0047
 
-first release
+first release (preview to Savannah admin)
 
+DATE         VERSION
 2015-05-19   4.01.00.0050
 
-fixes
+fixes - release
 
